# multi-cast-clock

./: Cargo.toml  README.md  makefile
src/: clock.rs  ipc.rs  main.rs  operator.rs  receiver.rs  receiver_A.rs  receiver_B.rs  recv1.rs  recv2.rs  static_info.rs  utils.rs
src/ipc/: mod.rs
