[package]
name = "full-order-mult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.3"


[[bin]]
name = "bin1"
path = "src/recv1.rs"

[[bin]]
name = "bin2"
path = "src/recv2.rs"

[[bin]]
name = "ope"
path = "src/operator.rs"
