[package]
name = "full-order-mult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bincode = "1.3"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

# [bin]
# name = "receiver"
# path = "src/receiver.rs"

# [[bin]]
# name = "bin1"
# path = "src/receiver_A.rs"

# [[bin]]
# name = "bin2"
# path = "src/receiver_B.rs"

# [[bin]]
# name = "ope"
# path = "src/operator.rs"
